Fix Spacing

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(40, 49, 49);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 15px;
 }
 
 .italiced {
